--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,5 @@
 - include_vars: "{{ ansible_os_family }}.yml"
 - include_tasks: install.yml
 - include_tasks: configure.yml
+- include_tasks: vms.yml
+  when: libvirt_vms and autocreate_vms
