Fix bug for vm creations

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,5 @@
 libvirt_image_dir: "/var/lib/libvirt/images"
 libvirt_image_base_dir: "{{ libvirt_image_dir }}/_base"
+autocreate_vms: False
+libvirt_vms: []
+vms_ssh_keys: []
