--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,4 +2,4 @@
 - include_tasks: install.yml
 - include_tasks: configure.yml
 - include_tasks: vms.yml
-  when: libvirt_vms and autocreate_vms
+  when: (libvirt_vms|length > 0) and autocreate_vms
