--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -2,12 +2,13 @@ packages:
   - qemu-kvm
   - qemu-img
   - libvirt
-  - libvirt-python
   - libvirt-client
   - virt-install
   - virt-viewer
   - virt-top
   - genisoimage
   - libguestfs-tools
+  - "{% if ansible_distribution_major_version == 7 %}libvirt-python{% else %}python3-libvirt{% endif %}"
+  - "{% if ansible_distribution_major_version == 7 %}python-lxml{% else %}python3-lxml{% endif %}"
 services:
   libvirt: libvirtd
